--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,14 +3,12 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+ 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
 a {
@@ -34,15 +32,6 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-.login-container {
-  background: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  max-width: 400px;
-  width: 100%;
 }
 
 button {
